--- a/RationShop/WebApp/templates/ContactUs.html
+++ b/RationShop/WebApp/templates/ContactUs.html
@@ -66,7 +66,7 @@
                                     <a class="nav-link" href="{% url 'Home' %}"> Home </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'Products' %}">Products</a>
+                                    <a class="nav-link" href="{% url 'Products' %}">Ration</a>
                                 </li>
 
                                 <li class="nav-item">
