--- a/RationShop/WebApp/templates/Home.html
+++ b/RationShop/WebApp/templates/Home.html
@@ -70,7 +70,7 @@
                                     <a class="nav-link" href="{% url 'Home' %}"> Home </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="{% url 'Products' %}">Products</a>
+                                    <a class="nav-link" href="{% url 'Products' %}">Ration</a>
                                 </li>
 
                                 <li class="nav-item">
@@ -89,12 +89,16 @@
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" role="button"
                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <i class="bi bi-person-circle" style="font-size: 2rem;"></i>
+                                        <i class="bi bi-person-circle" style="font-size: 2rem; border-radius:20px;"></i>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                                         {% if request.session.U_Name %}
                                         <h2 style="text-align:center;">Hi,{{request.session.U_Name}}</h2>
-                                        <hr style="border:solid;">
+                                        <hr style="border: 2px solid black; margin: 20px 0;">
+                                        <button class="dropdown-item">
+                                            <a href="{% url 'LogOut' %}">My Details</a>
+                                        </button>
+                                        <hr style="border: 2px solid black; margin: 20px 0;">
                                         <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
                                         {% else %}
                                         <a class="dropdown-item" href="{% url 'LoginPage' %}">Login</a>
