--- a/RationShop/WebApp/templates/LoginPage.html
+++ b/RationShop/WebApp/templates/LoginPage.html
@@ -59,7 +59,7 @@
 			<div class="col align-items-center flex-col">
 				<div class="text sign-in">
 					<h2>
-						Welcome
+						Welcome Back !
 					</h2>
 
 				</div>
