--- a/RationShop/WebApp/templates/ShopSignUp.html
+++ b/RationShop/WebApp/templates/ShopSignUp.html
@@ -110,12 +110,11 @@
 <body>
     <div class="card">
         <div class="text-center">
-            <h3 class="mb-3">Beneficiary? Create your account</h3>
+            <h3 class="mb-3">Shop Owner? Create your account</h3>
             <p class="text-muted mb-4">Complete signup with all details</p>
         </div>
         
-        <form  id="signup-form" class="form" method="post" action="{% url 'SignUp' %}">
-            {% csrf_token %}
+        <form  id="signup-form" class="form">
             <div class="mb-3">
                 <div class="input-group">
                     <input type="text" name="bname" class="form-control input-with-icon" id="fullName" placeholder="Enter Your Name">
@@ -129,7 +128,7 @@
 
             <div class="mb-3">
                 <div class="input-group">
-                    <input type="text" name="rationcard" class="form-control input-with-icon"  placeholder="Ration Card Number">
+                    <input type="text" name="ratoncard" class="form-control input-with-icon" id="fullName" placeholder="Shop Register Number">
                     <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                             <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
@@ -137,28 +136,10 @@
                     </div>
                 </div>
             </div>
-
+            
             <div class="mb-3">
                 <div class="input-group">
-                    <select class="form-control input-with-icon" name="cardcolor">
-                        <option>Select Ration Card Color</option>
-                        <option>Yellow</option>
-                        <option>Pink</option>
-                        <option>Blue</option>
-                        <option>White</option>
-
-                    </select>
-                    <div class="icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
-                            <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
-                        </svg>
-                    </div>
-                </div>
-            </div>
-
-            <div class="mb-3">
-                <div class="input-group">
-                    <input type="text" name="bmobile" class="form-control input-with-icon"  placeholder="Mobile Number">
+                    <input type="text" name="bmobile" class="form-control input-with-icon" id="fullName" placeholder="Mobile Number">
                     <div class="icon">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
                             <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
@@ -201,20 +182,17 @@
                 
             </div>
             <div class="divider">or</div>
-            
-            <button type="button" class="btn btn-light">
-                <a href="{% url 'Shop' %}">
-                Ration Shop Owner? Click Here
+            <button class="btn btn-light">
+
+            <a href="{% url 'SignUpPage' %}">
+                   
+                
+                Beneficiary? Click Here
             </a>
-            </button>
+        </button>
         </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            
-        })
-    </script>
 </body>
 </html>
