--- a/RationShop/AdminApp/templates/Display_User.html
+++ b/RationShop/AdminApp/templates/Display_User.html
@@ -17,7 +17,7 @@
                 <div class="card-body p-4">
                     <h5 class="card-title fw-semibold mb-4">User Details</h5>
                     <div class="table-responsive">
-                        <table class="table text-nowrap mb-0 align-left">
+                        <table class="table table-bordered">
                             <thead class="text-dark fs-4">
                             <tr>
                                 <th class="border-bottom-0">
@@ -37,6 +37,9 @@
                                 </th>
                                 <th class="border-bottom-0">
                                     <h6 class="fw-semibold mb-0">Password</h6>
+                                </th>
+                                <th class="border-bottom-0">
+                                    <h6 class="fw-semibold mb-0">No. Of Members</h6>
                                 </th>
                                 <th class="border-bottom-0">
                                     <h6 class="fw-semibold mb-0">Actions</h6>
@@ -66,6 +69,10 @@
                                 </td>
                                 <td class="border-bottom-0">
                                     <h6 class="fw-semibold mb-0 fs-4">{{i.U_Pass}}</h6>
+                                </td>
+                                <td class="border-bottom-0">
+                                    <h6 class="fw-semibold mb-0 fs-4">{{i.Family_Members}}</h6>
+
                                 </td>
 
                                 <td class="border-bottom-0">
