--- a/RationShop/WebApp/templates/ContactUs.html
+++ b/RationShop/WebApp/templates/ContactUs.html
@@ -90,7 +90,11 @@
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                                         {% if request.session.U_Name %}
                                         <h2 style="text-align:center;">Hi,{{request.session.U_Name}}</h2>
-                                        <hr style="border:solid;">
+                                        <hr style="border: 2px solid black; margin: 20px 0;">
+                                        <button class="dropdown-item">
+                                            <a href="{% url 'MyDetails' %}">My Details</a>
+                                        </button>
+                                        <hr style="border: 2px solid black; margin: 20px 0;">
                                         <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
                                         {% else %}
                                         <a class="dropdown-item" href="{% url 'LoginPage' %}">Login</a>
