--- a/RationShop/WebApp/templates/Home.html
+++ b/RationShop/WebApp/templates/Home.html
@@ -96,7 +96,7 @@
                                         <h2 style="text-align:center;">Hi,{{request.session.U_Name}}</h2>
                                         <hr style="border: 2px solid black; margin: 20px 0;">
                                         <button class="dropdown-item">
-                                            <a href="{% url 'LogOut' %}">My Details</a>
+                                            <a href="{% url 'MyDetails' %}">My Details</a>
                                         </button>
                                         <hr style="border: 2px solid black; margin: 20px 0;">
                                         <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
