--- a/RationShop/WebApp/templates/Products.html
+++ b/RationShop/WebApp/templates/Products.html
@@ -94,7 +94,12 @@
                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
                                         {% if request.session.U_Name %}
                                         <h2 style="text-align:center;">Hi,{{request.session.U_Name}}</h2>
-                                        <hr style="border:solid;">
+
+                                        <hr style="border: 2px solid black; margin: 20px 0;">
+                                        <button class="dropdown-item">
+                                            <a href="{% url 'MyDetails' %}">My Details</a>
+                                        </button>
+                                        <hr style="border: 2px solid black; margin: 20px 0;">
                                         <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
                                         {% else %}
                                         <a class="dropdown-item" href="{% url 'LoginPage' %}">Login</a>
@@ -135,7 +140,8 @@
                     <div class="our_text">
                         <h4>₹<strong class="yellow">{{i.Item_Price}}</strong></h4>
                         <h3>{{i.Item}}</h3><br>
-                        <button class="btn btn-info"> <a href="{% url 'SingleProduct' si_id=i.id %}">More Details</a></button>
+                        <button class="btn btn-info"><a href="{% url 'SingleProduct' si_id=i.id %}">More Details</a>
+                        </button>
                     </div>
                 </div>
             </div>
