--- a/RationShop/WebApp/templates/Products.html
+++ b/RationShop/WebApp/templates/Products.html
@@ -97,7 +97,7 @@
 
                                         <hr style="border: 2px solid black; margin: 20px 0;">
                                         <button class="dropdown-item">
-                                            <a href="{% url 'MyDetails' %}">My Details</a>
+                                            <a href="{% url 'MyDetails' details.id %}">My Details</a>
                                         </button>
                                         <hr style="border: 2px solid black; margin: 20px 0;">
                                         <a class="dropdown-item" href="{% url 'LogOut' %}">Logout</a>
